# Pointcept

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  Dockerfile  cloud_train.sh  docker-compose.yml  docker-entrypoint.sh  get_models.sh  list.sh  model_debug.ipynb  noises.ipynb  note.ipynb  profile_output.lprof  pyproject.toml  run.py  setup_datasets.sh  test.slurm  test_all.sh  train.slurm  train2.slurm  train_LRs.slurm  train_ft.slurm  train_many.sh  train_multinode.sh
.devcontainer/: devcontainer.json
.github/workflows/: formatter.yml
configs/_base_/: default_runtime.py
configs/custom/: semseg-spunet-v1m1-0-base.py
configs/s3dis/: insseg-pointgroup-v1m1-0-spunet-base-vs0p02-sc-aug.py  insseg-pointgroup-v1m1-0-spunet-base-vs0p02.py  insseg-pointgroup-v1m1-0-spunet-base.py  insseg-ppt-v1m1-0-pointgroup-spunet-ft-vs0p05.py  insseg-ppt-v1m1-0-pointgroup-spunet-ft.py  semseg-minkunet34c-0-base.py  semseg-pt-v1-0-base.py  semseg-pt-v2m1-0-base.py  semseg-pt-v2m2-0-base.py  semseg-pt-v2m2-0-lovasz.py  semseg-pt-v2m2-1-one-cycle.py  semseg-pt-v3m1-0-base.py  semseg-pt-v3m1-1-rpe.py  semseg-pt-v3m1-2-ppt-extreme.py  semseg-spunet-v1m1-0-cn-base.py  semseg-spunet-v1m2-0-base.py
configs/scannet/: pipeline-sculpting-oacnn.py  pipeline-sculpting-ptv3.py  pipeline-sculpting-sonata.py  (+31 more)
docker/: pcad.yml
scripts/: infer.sh  run_tests.py  run_tests_local.py  train.sh
sculpting/: __init__.py  custom_hooks.py  sculpting.py  sculpting_ops.py  transform.py  trimming.py  utils.py
tools/: inference.py  test.py  train.py  train_then_FT.py
wandb/: settings
(+31 files in other folders)
